testsuite/tests/printer/Ppr037.stderr

Ppr037.hs:23:1: error:
    Could not find module ‘Data.Singletons.Prelude.Bool’
    Use -v to see a list of the files searched for.

Ppr037.hs:24:1: error:
    Could not find module ‘Data.Singletons’
    Use -v to see a list of the files searched for.

Ppr037.hs:25:1: error:
    Could not find module ‘Data.Singletons.Single’
    Use -v to see a list of the files searched for.

Ppr037.hs:26:1: error:
    Could not find module ‘Data.Singletons.Prelude.Instances’
    Use -v to see a list of the files searched for.

Ppr037.hs:27:1: error:
    Could not find module ‘Data.Singletons.Util’
    Use -v to see a list of the files searched for.

Ppr037.hs:28:1: error:
    Could not find module ‘Data.Singletons.Promote’
    Use -v to see a list of the files searched for.

Ppr037.ppr.hs:8:1: error:
    Could not find module ‘Data.Singletons.Prelude.Bool’
    Use -v to see a list of the files searched for.

Ppr037.ppr.hs:9:1: error:
    Could not find module ‘Data.Singletons’
    Use -v to see a list of the files searched for.

Ppr037.ppr.hs:10:1: error:
    Could not find module ‘Data.Singletons.Single’
    Use -v to see a list of the files searched for.

Ppr037.ppr.hs:11:1: error:
    Could not find module ‘Data.Singletons.Prelude.Instances’
    Use -v to see a list of the files searched for.

Ppr037.ppr.hs:12:1: error:
    Could not find module ‘Data.Singletons.Util’
    Use -v to see a list of the files searched for.

Ppr037.ppr.hs:13:1: error:
    Could not find module ‘Data.Singletons.Promote’
    Use -v to see a list of the files searched for.
